// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`show section can mount 1`] = `
<div class="ShowSection ShowSection--layout-card">
	<div class="row">
		<div class="col">
			<sectiontitle-stub section="[object Object]"></sectiontitle-stub>
		</div>
		<!---->
	</div>
	<div class="ShowSection__content">
		<div class="MOCKED_SharpGrid ShowSection__grid">
			<div class="MOCKED_SharpGrid ShowPage__fields-grid row-class"></div>
		</div>
	</div>
</div>
`;

exports[`show section can mount: collapsable + contents layout 1`] = `
<div class="ShowSection ShowSection--layout-contents">
	<div class="row">
		<div class="col">
			<sectiontitle-stub section="[object Object]" collapsed="true" collapsable="true"></sectiontitle-stub>
		</div>
		<!---->
	</div>
	<!---->
</div>
`;
